# aa-pipeline

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
pipeline/: __init__.py  admin.py  apps.py  auth_hooks.py  forms.py  gdpr.py  managers.py  models.py  service_registry.py  signals.py  tasks.py  urls.py  views.py
pipeline/management/commands/: pipeline_sync_filters.py
pipeline/migrations/: 0001_initial.py  0002_checkfilter_content_type_related_name.py  0003_flowdiscordwebhook.py  0004_add_manage_flows_permission.py  0005_assign_if_missing_groups.py  0006_alter_flowdiscordwebhook_id_alter_flowstep_body_and_more.py
pipeline/static/pipeline/css/: pipeline.css
pipeline/static/pipeline/js/: pipeline.js
pipeline/templates/pipeline/: base.html  dashboard.html  flow_detail.html  index.html
pipeline/templates/pipeline/manage/: flow_assignments.html  flow_confirm_delete.html  flow_form.html  index.html  step_confirm_delete.html  step_form.html
