[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "aa-pipeline"
description = "Structured Journey System for Alliance Auth — generalised onboarding, training, and certification flows."
readme = "README.md"
keywords = ["allianceauth", "onboarding", "pipeline", "workflows", "certification", "training"]
license = { file = "LICENSE" }
authors = [{ name = "aa-pipeline contributors" }]
requires-python = ">=3.10"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = ["version"]
dependencies = ["allianceauth>=4.3.1,<5"]

[project.optional-dependencies]
markdown = ["markdown>=3.4", "bleach>=6.0"]

[project.urls]
"Homepage" = "https://github.com/Thrainkrilleve/aa-pipeline"
"Issue / Bug Reports" = "https://github.com/Thrainkrilleve/aa-pipeline/issues"

[tool.hatch.version]
path = "pipeline/__init__.py"

[tool.hatch.build]
include = ["/pipeline"]
